fix(input): align items to center in input component

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -99,7 +99,7 @@ $input-width: 100%;
 .input {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: center;
   padding: $input-padding;
   flex: 1;
   width: 100%;
